--- a/src/views/admin/gestionUsuario.ejs
+++ b/src/views/admin/gestionUsuario.ejs
@@ -126,7 +126,7 @@
               <div class="bg-white rounded-lg shadow-lg p-6 w-96 text-left">
                 <h3 class="text-lg font-semibold text-blue-700 mb-4">Editar Usuario</h3>
                 
-                <form action="/usuarios/editar/<%= usuario.id %>" method="POST" class="space-y-3">
+                <form class="space-y-3">
                   <div>
                     <label class="block text-sm font-semibold">Nombre</label>
                     <input type="text" name="nombre" value="<%= usuario.nombre %>" 
