--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -44,16 +44,18 @@
                 <i class="bi bi-person mr-2"></i> Mi Perfil
               </a>
               <hr class="border-gray-100">
-              <a href="/" class="flex items-center px-4 py-3 text-sm text-red-600 hover:bg-red-50 transition">
-                <i class="bi bi-box-arrow-right mr-2"></i> Cerrar sesión
-              </a>
+              <button id="cerrarSesion" class="flex items-center px-4 py-3 text-sm text-red-600 hover:bg-red-50 transition">
+                <i class="bi bi-box-arrow-right mr-2">
+                  Cerrar sesión
+                </i> 
+              </button>
             </div>
           </div>
         </div>
       <% } %>
     </nav>
   </div>
-
+  
   <div id="mobileMenu" class="md:hidden hidden bg-blue-800/95 backdrop-blur-sm px-4 pb-6 border-t border-blue-400/30">
     <nav class="flex flex-col space-y-3 text-md font-medium text-white pt-4">
       <% if (!locals.user) { %>
@@ -72,11 +74,32 @@
     </nav>
   </div>
 </header>
+
 <script>
   const menuToggle = document.getElementById("menuToggle");
   const mobileMenu = document.getElementById("mobileMenu");
   const profileToggle = document.getElementById("profileToggle");
   const profileMenu = document.getElementById("profileMenu");
+
+  const cerrarSesionBtn = document.getElementById("cerrarSesion");
+  cerrarSesionBtn.addEventListener("click", logOut)
+
+  async function logOut() {    
+    try {
+      const response = await fetch('/api/login/cerrar-sesion', {
+        method: 'GET',
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      });
+
+      setTimeout(() => {
+        window.location.href = '/';
+      }, 3000);
+    } catch (error) {
+      console.log('Error al cerrar sesión:', error);
+    }
+  }
 
   if (menuToggle) {
     menuToggle.addEventListener("click", () => {
